--- a/test/suites/general/run/results/.gitignore
+++ b/test/suites/general/run/results/.gitignore
@@ -1,3 +1,4 @@
-# Ignore all the files in this folder except for this file.
+# Ignore all the files in this folder except for this file and the README.md.
 /*
 !.gitignore
+!README.md
